# tradingview-scraper

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  Makefile  README.md  debug_btc.json  debug_candidates.json  debug_manifest.py  debug_meta_build.py  debug_run_id.py  debug_streamer_raw.py  dev-requirements.txt  files_feat_ingestion.txt  files_refactor_dataops.txt  files_refactor_phase2.txt  files_refactor_phase3.txt  files_refactor_remediation.txt  jit-out-parameter-pattern-PredictabilityUtils-20260202.md  market_caps_crypto.json  meta_returns_meta_benchmark_hrp.pkl  mlflow.db  patch_manifest.py  pyproject.toml  ralph.yml  reproduce_json_issue.py  reproduce_json_numpy.py  requirements.txt  security_review_report.md  setup.py  test.pkl  test_fix_054.py  test_json_serialization.py  test_multi.parquet  test_trend_logic.py  test_vbt_sl.py  verify_engine_import.py
.dvc/: config
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
configs/: README.md  binance_mean_reversion.yaml  binance_trend_momentum.yaml  binance_trend_momentum_weekly.yaml  binance_ts_mean_reversion_long.yaml  binance_ts_mean_reversion_short.yaml  binance_ts_momentum_long.yaml  binance_ts_momentum_long_weekly.yaml  binance_ts_momentum_short.yaml  binance_xs_mean_reversion.yaml  binance_xs_momentum.yaml  cfd_trend_momentum.yaml  cfd_trend_momentum_short.yaml  cfd_trend_multi.yaml  crypto_cex_base_top50.yaml  crypto_cex_base_top50_binance.yaml  crypto_cex_base_top50_binance_dated.yaml  crypto_cex_base_top50_binance_perp.yaml  crypto_cex_base_top50_bitget.yaml  crypto_cex_base_top50_bitget_dated.yaml  crypto_cex_base_top50_bitget_perp.yaml  crypto_cex_base_top50_bybit.yaml  crypto_cex_base_top50_bybit_dated.yaml  crypto_cex_base_top50_bybit_perp.yaml  crypto_cex_base_top50_dated.yaml  crypto_cex_base_top50_okx.yaml  crypto_cex_base_top50_okx_dated.yaml  crypto_cex_base_top50_okx_perp.yaml  crypto_cex_base_top50_perp.yaml  crypto_cex_mean_reversion.yaml  crypto_cex_mtf_monthly_weekly_daily_short.yaml  crypto_cex_mtf_perps_long.yaml  crypto_cex_mtf_spot_short.yaml  crypto_cex_mtf_weekly_daily_daily.yaml  crypto_cex_trend_binance_dated_daily_long.yaml  crypto_cex_trend_binance_dated_daily_short.yaml  crypto_cex_trend_binance_perp_daily_long.yaml  crypto_cex_trend_binance_perp_daily_short.yaml  crypto_cex_trend_binance_spot_daily_long.yaml  crypto_cex_trend_binance_spot_daily_short.yaml  (+56 more)
docs/: TODO_improvements.md  conf.py  correlation_tests.md  crypto_production_readiness_report.md  crypto_production_readiness_report_final.md  exchange_symbol_audit_report.md  index.rst  liquidity_review_20251220.md  metadata_schema_guide.md  production_workflow.md  stream.rst  universe_selection_strategy.md
examples/: async_stream_demo.py  resilient_stream.py
flows/: production_flow.py
scripts/: analyze_audit_windows.py  analyze_clusters.py  analyze_forex_universe.py  analyze_subcluster.py  audit_ada_short.py  audit_antifragility.py  audit_calibration_summary.py  audit_current_schema.py  audit_data_spikes.py  audit_directional_sign_test.py  audit_full_matrix.py  audit_l0_l4_ledger.py  audit_ledger_anomalies.py  audit_meta_anomaly.py  audit_meta_concentration.py  audit_meta_outliers.py  audit_meta_tail_risk.py  audit_metadata_catalog.py  audit_metadata_pit.py  audit_metadata_timezones.py  audit_multi_quote_pairs.py  audit_orchestration.py  audit_prom.py  audit_symbol_age.py  audit_tournament_matrix.py  audit_v4_parity.py  audit_windows.py  audit_xrp.py  backtest_engine.py  baseline_audit.py  build_execution_catalog.py  build_meta_returns.py  build_metadata_catalog.py  cache_selection_features.py  calibrate_regime_detector.py  check_new_listing_perf.py  check_overview_fields.py  cleanup_metadata_catalog.py  compare_selection_alpha.py  compare_strategies.py  (+115 more)
tests/: locustfile.py  test_advanced_toxicity.py  test_advanced_trend_filter.py  test_alpha_correlation.py  test_anomaly_detection.py  test_async_retry.py  test_async_screener.py  test_async_stream_handler.py  test_async_stream_reconnect.py  test_async_streamer.py  test_async_streamer_serialization.py  test_audit_ledger.py  test_audit_remediation.py  test_audit_utils.py  (+152 more)
(+1249 files in other folders)
